<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_dummy_taxes"
            android:icon="@drawable/ic_baseline_attach_money_24"
            android:title="@string/menu_dummy_taxes" />
        <item
            android:id="@+id/nav_dummy_socials"
            android:icon="@drawable/ic_baseline_social_distance_24"
            android:title="@string/menu_dummy_socials" />
        <item
            android:id="@+id/nav_dummy_stores"
            android:icon="@drawable/ic_baseline_local_grocery_store_24"
            android:title="@string/menu_dummy_stores" />
    </group>
</menu>