<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="detailViewModel"
            type="com.dummy.android.ui.main.taxes.detail.DetailViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/elements_margin_medium"
        tools:context=".ui.main.taxes.detail.DetailFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.25" />

            <TextView
                android:id="@+id/tv_ticker_header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/owner"
                android:textAllCaps="true"
                app:layout_constraintBaseline_toBaselineOf="@+id/tv_ticker_name"
                app:layout_constraintEnd_toStartOf="@+id/guideline"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/tv_ticker_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/elements_margin_medium"
                android:text="@{detailViewModel.selectedRecord.owner}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@id/guideline"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="Billy Wonka" />

            <TextView
                android:id="@+id/tv_client_header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/client"
                android:textAllCaps="true"
                app:layout_constraintBaseline_toBaselineOf="@+id/tv_client_name"
                app:layout_constraintEnd_toStartOf="@+id/guideline"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/tv_client_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/elements_margin_medium"
                android:layout_marginTop="@dimen/elements_margin_medium"
                android:text="@{detailViewModel.selectedRecord.client}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@id/guideline"
                app:layout_constraintTop_toBottomOf="@id/tv_ticker_name"
                tools:text="Nice client" />

            <TextView
                android:id="@+id/tv_issue_header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/issue"
                android:textAllCaps="true"
                app:layout_constraintBaseline_toBaselineOf="@+id/tv_issue_name"
                app:layout_constraintEnd_toStartOf="@+id/guideline"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/tv_issue_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/elements_margin_medium"
                android:layout_marginTop="@dimen/elements_margin_medium"
                android:text="@{detailViewModel.selectedRecord.issue}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@id/guideline"
                app:layout_constraintTop_toBottomOf="@id/tv_client_name"
                tools:text="My wallet" />

            <TextView
                android:id="@+id/tv_amount_header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/amount"
                android:textAllCaps="true"
                app:layout_constraintBaseline_toBaselineOf="@+id/tv_amount_name"
                app:layout_constraintEnd_toStartOf="@+id/guideline"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/tv_amount_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/elements_margin_medium"
                android:layout_marginTop="@dimen/elements_margin_medium"
                app:amount_formatted="@{detailViewModel.selectedRecord.amount}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@id/guideline"
                app:layout_constraintTop_toBottomOf="@id/tv_issue_name"
                tools:text="$100,000" />

            <TextView
                android:id="@+id/tv_date_header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/date"
                android:textAllCaps="true"
                app:layout_constraintBaseline_toBaselineOf="@+id/tv_date_name"
                app:layout_constraintEnd_toStartOf="@+id/guideline"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/tv_date_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/elements_margin_medium"
                android:layout_marginTop="@dimen/elements_margin_medium"
                app:date_formatted="@{detailViewModel.selectedRecord.date}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@id/guideline"
                app:layout_constraintTop_toBottomOf="@id/tv_amount_name"
                tools:text="10.20.2020" />

            <TextView
                android:id="@+id/tv_specific_header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/specific"
                android:textAllCaps="true"
                app:layout_constraintBaseline_toBaselineOf="@+id/tv_specific_name"
                app:layout_constraintEnd_toStartOf="@+id/guideline"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/tv_specific_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/elements_margin_medium"
                android:layout_marginTop="@dimen/elements_margin_medium"
                android:text="@{detailViewModel.selectedRecord.specificIssue}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@id/guideline"
                app:layout_constraintTop_toBottomOf="@id/tv_date_name"
                tools:text="Warning: The 'kotlin-android-extensions' Gradle plugin is deprecated. Please use this migration guide (https://goo.gle/kotlin-android-extensions-deprecation) to start working with View Binding (https://developer.android.com/topic/libraries/view-binding) and the 'kotlin-parcelize' plugin." />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>